# SocialMediaCatalog

./: .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .licrc  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  THIRDPARTYLICENSES.TXT  ThirdPartyLibraries.txt  ThirdPartyLicenses.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  tests_checker.yml
.github/workflows/: codeql-analysis.yml
docs/: CHANGELOG.md
social_media_catalog/: __init__.py
social_media_catalog/youtube/: __init__.py  playlist.py  video.py  video_downloader.py  video_list.py
social_media_catalog_viewer/: about_window.py  catalog_viewer.py  file_handler.py  main.py  main_window.py  new_dialog_window.py  viewer.py  welcome_window.py
tests/: __init__.py  playlist.json  test_youtube_download.py  youtube_download_test.py
tests/youtube/: VideoListTest.json.license  video_downloader_test.py
